--- a/matey-studio-react/src/styles/base.css
+++ b/matey-studio-react/src/styles/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700&display=swap');
+
 *,
 *::before,
 *::after {
@@ -10,7 +12,7 @@ html {
     -moz-text-size-adjust: none;
     -webkit-text-size-adjust: none;
     text-size-adjust: none;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
 }
 
 body,
