--- a/matey-studio-react/src/styles/main.css
+++ b/matey-studio-react/src/styles/main.css
@@ -1,38 +1,4 @@
 @charset "UTF-8";
-@keyframes blobMove1 {
-  0% {
-    transform: translate(0%, 0%) scale(1);
-  }
-  20% {
-    transform: translate(10%, 5%) scale(1.03);
-  }
-  40% {
-    transform: translate(5%, 15%) scale(0.97);
-  }
-  60% {
-    transform: translate(-10%, 10%) scale(1.04);
-  }
-  80% {
-    transform: translate(-5%, -10%) scale(0.96);
-  }
-}
-@keyframes blobMove2 {
-  0% {
-    transform: translate(0%, 0%) scale(1);
-  }
-  20% {
-    transform: translate(10%, 5%) scale(1.03);
-  }
-  40% {
-    transform: translate(5%, 15%) scale(0.97);
-  }
-  60% {
-    transform: translate(-10%, 10%) scale(1.04);
-  }
-  80% {
-    transform: translate(-5%, -10%) scale(0.96);
-  }
-}
 body {
   background-color: #0a0a0a;
   color: #ffffff;
@@ -90,6 +56,7 @@ body {
   will-change: transform;
   position: relative;
   z-index: 1;
+  cursor: pointer;
 }
 .header .nav-wrapper .nav .nav-bar .nav-item {
   display: inline-block;
@@ -106,7 +73,6 @@ body {
 .header .nav-wrapper .nav .nav-bar .nav-indicator {
   position: absolute;
   top: 0.4rem;
-  left: 0;
   height: 70%;
   background-color: #161616;
   box-shadow: 0 0 7px rgba(112, 190, 250, 0.7490196078);
@@ -120,7 +86,6 @@ body {
   font-weight: 400;
   font-size: 0.9rem;
   color: #9c9c9c;
-  cursor: pointer;
 }
 
 .hero {
@@ -145,6 +110,7 @@ body {
   height: 30%;
   border-radius: 50%;
   filter: blur(6rem);
+  will-change: transform;
   z-index: -1;
   opacity: 1;
 }
@@ -152,113 +118,51 @@ body {
   background: #70befa;
 }
 .hero .blobs .blob.blob-blue.one {
-  top: -10%;
+  top: 6%;
   left: 65%;
-  width: 40%;
-  height: 40%;
-  animation: blobMove1 15s ease-in-out infinite;
   z-index: 0;
 }
 .hero .blobs .blob.blob-blue.two {
-  top: 40%;
-  left: 55%;
-  animation: blobMove2 18s ease-in-out infinite;
+  top: 55%;
+  left: 5%;
 }
 .hero .blobs .blob.blob-blue.three {
-  top: 10%;
-  right: 35%;
-  width: 35%;
-  height: 35%;
-  animation: blobMove1 20s ease-in-out infinite;
-  z-index: -1;
+  top: 20%;
+  right: 65%;
 }
 .hero .blobs .blob.blob-blue.four {
-  top: 60%;
-  right: -5%;
-  animation: blobMove2 17s ease-in-out infinite;
+  top: 50%;
+  right: 5%;
 }
 .hero .blobs .blob.blob-blue.five {
   top: 70%;
-  left: 20%;
-  width: 25%;
-  height: 25%;
-  animation: blobMove2 19s ease-in-out infinite;
-}
-.hero .blobs .blob.blob-blue.six {
-  top: -5%;
-  left: 45%;
-  width: 20%;
-  height: 20%;
-  animation: blobMove1 16s ease-in-out infinite;
-}
-.hero .blobs .blob.blob-blue.seven {
-  top: 50%;
-  left: 5%;
-  width: 20%;
-  height: 20%;
-  animation: blobMove2 20s ease-in-out infinite;
-}
-.hero .blobs .blob.blob-blue.eight {
-  top: 30%;
-  left: 10%;
-  width: 30%;
-  height: 30%;
-  animation: blobMove1 16s ease-in-out infinite;
-}
-.hero .blobs .blob.blob-blue.nine {
-  top: 37%;
-  right: 5%;
-  width: 20%;
-  height: 20%;
-  animation: blobMove2 60s ease-in-out infinite;
+  left: 40%;
 }
 .hero .blobs .blob.blob-dark {
   background: rgb(0, 0, 0);
   opacity: 0.9;
 }
 .hero .blobs .blob.blob-dark.one {
-  top: -5%;
-  left: -5%;
-  width: 45%;
-  height: 45%;
-  animation: blobMove1 22s ease-in-out infinite;
+  top: 5%;
+  left: 5%;
 }
 .hero .blobs .blob.blob-dark.two {
-  top: 40%;
-  left: 3%;
-  width: 30%;
-  height: 30%;
-  animation: blobMove2 5s ease-in-out infinite reverse;
+  top: 60%;
+  left: 30%;
   z-index: -1;
 }
 .hero .blobs .blob.blob-dark.three {
   top: 60%;
   right: 2%;
-  width: 40%;
-  height: 40%;
-  animation: blobMove1 23s ease-in-out infinite;
 }
 .hero .blobs .blob.blob-dark.four {
   bottom: 35%;
   left: 55%;
-  width: 35%;
-  height: 35%;
-  animation: blobMove2 12s ease-in-out infinite reverse;
 }
 .hero .blobs .blob.blob-dark.five {
   bottom: 40%;
   left: 45%;
-  width: 35%;
-  height: 35%;
-  animation: blobMove2 9s ease-in-out infinite reverse;
   z-index: -3;
-}
-.hero .blobs .blob.blob-dark.six {
-  bottom: -10%;
-  left: 25%;
-  width: 35%;
-  height: 35%;
-  animation: blobMove2 13s ease-in-out infinite reverse;
 }
 .hero .hero-content {
   position: relative;
