--- a/matey-studio-react/src/styles/main.scss
+++ b/matey-studio-react/src/styles/main.scss
@@ -58,6 +58,7 @@ body {
           will-change: transform;
           position: relative;
           z-index: 1;
+          cursor: pointer;
         }
 
         .nav-item {
@@ -73,7 +74,6 @@ body {
         .nav-indicator {
           position: absolute;
           top: 0.4rem;
-          left: 0;
           height: 70%;
           background-color: $color-bg-light;
           box-shadow: 0 0 7px $color-accent-soft;
@@ -87,7 +87,6 @@ body {
           font-weight: 400;
           font-size: 0.9rem;
           color: $color-text-muted;
-          cursor: pointer;
         }
       }
     }
@@ -116,71 +115,32 @@ body {
       height: 30%;
       border-radius: 50%;
       filter: blur(6rem);
+      will-change: transform;
       z-index: -1;
       opacity: 1;
       &.blob-blue {
         background: $color-accent;
 
         &.one {
-          top: -10%;
+          top: 6%;
           left: 65%;
-          width: 40%;
-          height: 40%;
-          animation: blobMove1 15s ease-in-out infinite;
           z-index: 0;
         }
         &.two {
-          top: 40%;
-          left: 55%;
-          animation: blobMove2 18s ease-in-out infinite;
+          top: 55%;
+          left: 5%;
         }
         &.three {
-          top: 10%;
-          right: 35%;
-          width: 35%;
-          height: 35%;
-          animation: blobMove1 20s ease-in-out infinite;
-          z-index: -1;
+          top: 20%;
+          right: 65%;
         }
         &.four {
-          top: 60%;
-          right: -5%;
-          animation: blobMove2 17s ease-in-out infinite;
+          top: 50%;
+          right: 5%;
         }
         &.five {
           top: 70%;
-          left: 20%;
-          width: 25%;
-          height: 25%;
-          animation: blobMove2 19s ease-in-out infinite;
-        }
-        &.six {
-          top: -5%;
-          left: 45%;
-          width: 20%;
-          height: 20%;
-          animation: blobMove1 16s ease-in-out infinite;
-        }
-        &.seven {
-          top: 50%;
-          left: 5%;
-          width: 20%;
-          height: 20%;
-          animation: blobMove2 20s ease-in-out infinite;
-        }
-        &.eight {
-          top: 30%;
-          left: 10%;
-          width: 30%;
-          height: 30%;
-          animation: blobMove1 16s ease-in-out infinite;
-        }
-        &.nine {
-          top: 37%;
-          right: 5%;
-          width: 20%;
-          height: 20%;
-          animation: blobMove2 60s ease-in-out infinite;
+          left: 40%;
         }
       }
 
@@ -189,48 +149,27 @@ body {
         opacity: 0.9;
 
         &.one {
-          top: -5%;
-          left: -5%;
-          width: 45%;
-          height: 45%;
-          animation: blobMove1 22s ease-in-out infinite;
+          top: 5%;
+          left: 5%;
         }
         &.two {
-          top: 40%;
-          left: 3%;
-          width: 30%;
-          height: 30%;
-          animation: blobMove2 5s ease-in-out infinite reverse;
+          top: 60%;
+          left: 30%;
+
           z-index: -1;
         }
         &.three {
           top: 60%;
           right: 2%;
-          width: 40%;
-          height: 40%;
-          animation: blobMove1 23s ease-in-out infinite;
         }
         &.four {
           bottom: 35%;
           left: 55%;
-          width: 35%;
-          height: 35%;
-          animation: blobMove2 12s ease-in-out infinite reverse;
         }
         &.five {
           bottom: 40%;
           left: 45%;
-          width: 35%;
-          height: 35%;
-          animation: blobMove2 9s ease-in-out infinite reverse;
           z-index: -3;
-        }
-        &.six {
-          bottom: -10%;
-          left: 25%;
-          width: 35%;
-          height: 35%;
-          animation: blobMove2 13s ease-in-out infinite reverse;
         }
       }
     }
@@ -324,6 +263,7 @@ body {
     > h2 {
       font-size: 3.5rem;
       text-align: center;
+
       font-weight: 400;
       line-height: 1.3;
       margin-bottom: 2rem;
