--- a/matey-studio-react/src/styles/main.css
+++ b/matey-studio-react/src/styles/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   background-color: #0a0a0a;
   color: #ffffff;
@@ -38,7 +37,7 @@ body {
 }
 .header .nav-wrapper .nav {
   border: 1px solid #222222;
-  background-color: #0d0d0d;
+  background-color: #0a0a0a;
   border-radius: 0.7rem;
 }
 .header .nav-wrapper .nav .nav-bar {
@@ -46,11 +45,9 @@ body {
   padding: 0.4rem 0.4rem;
   list-style: none;
   display: flex;
-  gap: 0.1rem;
   position: relative;
 }
 .header .nav-wrapper .nav .nav-bar li {
-  padding: 0.2rem 0.9rem;
   border-radius: 7px;
   transition: border 0.3s ease;
   will-change: transform;
@@ -58,28 +55,27 @@ body {
   z-index: 1;
   cursor: pointer;
 }
-.header .nav-wrapper .nav .nav-bar .nav-item {
-  display: inline-block;
-  transition: all 0.3 ease;
-  position: relative;
-}
-.header .nav-wrapper .nav .nav-bar .nav-item:hover {
-  background: linear-gradient(to right, #ffffff, #70befa);
+.header .nav-wrapper .nav .nav-bar li:hover .nav-item {
+  background: linear-gradient(to right, #ffffff, rgb(98, 177, 237));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
 }
+.header .nav-wrapper .nav .nav-bar .nav-item {
+  display: inline-block;
+  padding: 0.2rem 0.9rem;
+  transition: all 0.3 ease;
+  position: relative;
+}
 .header .nav-wrapper .nav .nav-bar .nav-indicator {
   position: absolute;
-  top: 0.4rem;
   height: 70%;
   background-color: #161616;
   box-shadow: 0 0 7px rgba(112, 190, 250, 0.7490196078);
   border-radius: 0.4rem;
   transition: all 0.3s ease;
   z-index: 0;
-  opacity: 0;
 }
 .header .nav-wrapper .nav .nav-bar a {
   all: unset;
@@ -115,7 +111,7 @@ body {
   opacity: 1;
 }
 .hero .blobs .blob.blob-blue {
-  background: #70befa;
+  background: rgb(98, 177, 237);
 }
 .hero .blobs .blob.blob-blue.one {
   top: 6%;
@@ -190,11 +186,13 @@ body {
   margin-bottom: 2rem;
 }
 .hero .hero-content .hero-btns {
-  background-color: #0d0d0d;
+  background-color: #0a0a0a;
   border-radius: 0.7rem;
   padding: 0.3rem;
   display: flex;
+  align-items: center;
   gap: 0.3rem;
+  position: relative;
 }
 .hero .hero-content .hero-btns .btn {
   all: unset;
@@ -203,10 +201,10 @@ body {
   border-radius: 0.7rem;
   font-size: 0.9rem;
   color: #9c9c9c;
+  z-index: 1;
 }
 .hero .hero-content .hero-btns .btn:hover {
-  box-shadow: 0 0 5px rgba(112, 190, 250, 0.7490196078);
-  background: linear-gradient(to right, #ffffff, rgba(112, 190, 250, 0.7490196078));
+  background: linear-gradient(to right, #ffffff, rgb(98, 177, 237));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -221,12 +219,22 @@ body {
   width: 0.9rem;
   height: 0.8rem;
 }
+.hero .hero-content .hero-btns .hero-indicator {
+  position: absolute;
+  opacity: 0;
+  height: 70%;
+  background-color: transparent;
+  box-shadow: 0 0 7px rgba(112, 190, 250, 0.7490196078);
+  border-radius: 0.4rem;
+  transition: all 0.3s ease;
+  z-index: 0;
+}
 .hero .gradient-overlay {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 30px; /* výška prechodu */
+  height: 30px;
   background: linear-gradient(to bottom, transparent, #0a0a0a);
   pointer-events: none;
   z-index: 1;
@@ -266,12 +274,12 @@ body {
   border-radius: 0.7rem;
   font-size: 0.9rem;
   color: #9c9c9c;
-  box-shadow: 0 0 3px #70befa;
+  box-shadow: 0 0 3px rgb(98, 177, 237);
   background-color: #161616;
   cursor: pointer;
 }
 .about-us .container .btn .btn-text {
-  background: linear-gradient(to right, #ffffff, #70befa);
+  background: linear-gradient(to right, #ffffff, rgb(98, 177, 237));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -296,6 +304,8 @@ body {
 
 .what-we-do {
   padding: 5rem 1.6rem;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 .what-we-do .service-heading {
   font-size: 5.8rem;
@@ -308,30 +318,68 @@ body {
   background-clip: text;
   text-fill-color: transparent;
 }
-.what-we-do .container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
 .what-we-do .container .services-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1rem;
 }
 .what-we-do .container .services-grid .service-card {
+  position: relative;
   background-color: #0d0d0d;
-  padding: 2rem;
+  padding: 2.7rem 2.3rem 3.5rem;
   border: 1px solid #222222;
   border-radius: 0.7rem;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  gap: 2.6rem;
   color: #9c9c9c;
+  height: 100%;
+  align-items: stretch;
+  overflow: hidden;
+}
+.what-we-do .container .services-grid .service-card .glow {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 70%;
+  height: 4px;
+  background: radial-gradient(circle at top center, rgba(112, 190, 250, 0.7490196078), transparent);
+  border-radius: 100%;
+  filter: blur(3rem);
+  opacity: 0.2rem;
+  background-color: rgba(112, 190, 250, 0.7490196078);
+  z-index: 0;
+}
+.what-we-do .container .services-grid .service-card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0.1rem;
+  width: 100%;
+  background: radial-gradient(ellipse at top center, rgb(98, 177, 237), transparent 80%);
+  box-shadow: 0px 6px 11px -11px rgb(98, 177, 237);
+  pointer-events: none;
+  z-index: 1;
+}
+.what-we-do .container .services-grid .service-card .card-preview {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  flex: 1;
 }
 .what-we-do .container .services-grid .service-card .card-preview .chat-simulation {
-  padding: 1.2rem;
+  padding: 1.3rem;
   border: 1px solid #222222;
   border-radius: 0.7rem;
   font-size: 0.9rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+  flex: 1;
 }
 .what-we-do .container .services-grid .service-card .card-preview .chat-simulation .chat {
   display: flex;
@@ -339,9 +387,197 @@ body {
   align-items: center;
   gap: 1rem;
 }
+.what-we-do .container .services-grid .service-card .card-preview .chat-simulation .chat .chat-ai {
+  box-shadow: 0px -1px 3px 0.3px rgba(112, 190, 250, 0.7490196078);
+}
 .what-we-do .container .services-grid .service-card .card-preview .chat-simulation .chat > span {
-  font-size: 1.3rem;
-  padding: 0.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  font-weight: 200;
+  font-size: 1.1rem;
+  width: 3rem;
+  height: 3rem;
   border: 1px solid #222222;
+  border-radius: 0.35rem;
+  aspect-ratio: 1/1;
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-simulation .chat .chat-message {
+  display: flex;
+  flex-direction: column;
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-simulation .chat .chat-message .chat-author {
+  font-size: 0.9rem;
+  font-weight: 500;
+  margin-bottom: 0.1rem;
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-simulation .chat .chat-message .chat-author strong {
+  background: linear-gradient(to right, #ffffff, rgba(112, 190, 250, 0.7490196078));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  font-weight: 500;
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-simulation .chat .chat-message > p {
+  font-weight: 300;
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-input {
+  padding: 0.5rem 1.3rem;
+  border: 1px solid #222222;
+  border-radius: 0.35rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-input span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  aspect-ratio: 1/1;
+  border: 1px solid #222222;
+  border-radius: 0.35rem;
+  font-size: 1.5rem;
+  font-weight: 200;
+  line-height: 0.9rem;
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-input > p {
+  width: 70%;
+  font-size: 0.9rem;
+  font-weight: 400;
+  text-align: left;
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-input .input-arrow {
+  width: 1.9rem;
+  height: 1.9rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.3rem;
+  box-shadow: 1px 1px 3px 0.3px rgba(112, 190, 250, 0.7490196078);
+}
+.what-we-do .container .services-grid .service-card .card-preview .chat-input .input-arrow img {
+  width: 0.8rem;
+  height: auto;
+  rotate: 270deg;
+}
+.what-we-do .container .services-grid .service-card .card-preview .image-simulation {
+  border: 1px solid #222222;
+  border-radius: 0.35rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  gap: 2.6rem;
+}
+.what-we-do .container .services-grid .service-card .card-preview .image-simulation .particles {
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  top: 2px;
+  background-color: white;
+}
+.what-we-do .container .services-grid .service-card .card-preview .image-simulation p {
+  font-size: 0.9rem;
+  background: linear-gradient(90deg, #ffffff, rgba(112, 190, 250, 0.7490196078));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  border: 1px solid #222222;
+  border-radius: 0.35rem;
+  padding: 0.47rem 0.8rem;
+}
+.what-we-do .container .services-grid .service-card .card-preview .image-input {
+  padding: 0.55rem 1.3rem;
+  border: 1px solid #222222;
+  border-radius: 0.35rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.what-we-do .container .services-grid .service-card .card-preview .image-input > p {
+  font-size: 0.9rem;
+}
+.what-we-do .container .services-grid .service-card .card-preview .image-input .generate-btn {
+  all: unset;
+  font-size: 0.9rem;
+  font-weight: 500;
+  background: linear-gradient(90deg, #ffffff, rgb(98, 177, 237));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  border: 1px solid #222222;
+  border-radius: 0.35rem;
+  padding: 0.22rem 0.55rem;
+  box-shadow: 0px 0px 1px 1px rgba(112, 190, 250, 0.7490196078);
+}
+.what-we-do .container .services-grid .service-card .card-heading > h3 {
+  font-size: 1.95rem;
+  color: #ffffff;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.what-we-do .container .services-grid .service-card .card-heading > p {
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+.what-we-do .services-detail {
+  margin-top: 1.6rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1.7rem;
+}
+.what-we-do .services-detail .card {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #222222;
+  padding: 3rem 1.7rem;
+  background-color: #0d0d0d;
   border-radius: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+.what-we-do .services-detail .card .glow {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 70%;
+  height: 8px;
+  background: radial-gradient(circle at top center, rgba(112, 190, 250, 0.7490196078), transparent);
+  border-radius: 100%;
+  filter: blur(3rem);
+  opacity: 0.2rem;
+  background-color: rgba(112, 190, 250, 0.7490196078);
+  z-index: 0;
+}
+.what-we-do .services-detail .card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0.1rem;
+  width: 100%;
+  background: radial-gradient(ellipse at top center, rgb(98, 177, 237), transparent 80%);
+  box-shadow: 0px 6px 11px -11px rgb(98, 177, 237);
+  pointer-events: none;
+  z-index: 1;
+}
+.what-we-do .services-detail .card .card-effect {
+  min-height: 200px;
+}
+.what-we-do .services-detail .card .card-title {
+  font-size: 2.3rem;
+  font-weight: 400;
+}
+.what-we-do .services-detail .card .card-desc {
+  font-size: 0.95rem;
+  color: #9c9c9c;
+  width: 94%;
 }/*# sourceMappingURL=main.css.map */
