--- a/matey-studio-react/src/styles/main.css
+++ b/matey-studio-react/src/styles/main.css
@@ -471,12 +471,15 @@ body {
   justify-content: center;
   flex: 1;
   gap: 2.6rem;
+  position: relative;
+  overflow: hidden;
 }
 .what-we-do .container .services-grid .service-card .card-preview .image-simulation .particles {
   position: absolute;
-  height: 1px;
+  height: 2px;
   width: 1px;
-  top: 2px;
+  top: 50%;
+  left: 50%;
   background-color: white;
 }
 .what-we-do .container .services-grid .service-card .card-preview .image-simulation p {
